--- a/templates/results.html
+++ b/templates/results.html
@@ -11,8 +11,9 @@
     <ul>
         {% for product in products %}
             <li>
-                <img src="{{ product.imagen_url }}" alt="{{ product.nombre }}">
+                <!-- <img src="{{ product.imagen_url }}" alt="{{ product.nombre }}"> -->
                 <h2>{{ product.nombre }}</h2>
+                <p>Codigo Nacional: {{ product.codigo_nacional }}</p>
                 <p>{{ product.descripcion }}</p>
                 <p><strong>Modo de implementacion:</strong> {{ product.modo_implementacion }}</p>
             </li>
